config-server/kubernetes-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: config-server-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: config-server
  ports:
    - port: 8080
      targetPort: 8888
