config-server/kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-server-service
spec:
  selector:
    app: config-server
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
