config-server/kubernetes-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: config-server-gateway
spec:
  listeners:
    - name: http
      protocol: HTTP
      port: 80
