config-server/kubernetes-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-server-ingress
spec:
  rules:
    - host: config-server-ip13.com
      http:
        paths:
          - backend:
              service:
                name: config-server-service
                port:
                  number: 8888
